# ADPCM-compressor

./: CMakeLists.txt  README.md  main.cpp
audio-io/: wav.cpp
compressor/: compress.cpp
io/: a.out  read_wav.cpp
lib/: read_wav.h
src/: main.cpp
